# gaokao-evidence-skill

./: .gitattributes  .gitignore  LICENSE  README.md  SKILL.md  analyze.py  pyproject.toml  quick_test.py
tests/: test_scoring.py
