[project]
name = "gaokao-evidence-skill"
version = "0.2.0"
description = "Evidence-driven Gaokao college application recommendation — Claude Code Skill"
requires-python = ">=3.11"

dependencies = [
    "openai>=1.30",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "black",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
