[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["packages*"]

[project]
name = "gaokao-evidence-skill"
version = "0.3.0"
description = "Evidence-driven Gaokao college application advisor — pure Claude Code Skill, zero external API"
requires-python = ">=3.11"

dependencies = [
    # Pure Python rule engine — no network calls, no API keys required
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "black",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
